--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>love.kill</groupId>
 	<artifactId>methodcache-spring-boot-starter</artifactId>
-	<version>1.1.0-RELEASE</version>
+	<version>1.1.0</version>
 
 	<name>methodcache-spring-boot-starter</name>
 	<description>Method cache project for Spring Boot</description>
+	<url>https://github.com/Lycop/methodcache</url>
 
 	<licenses>
 		<license>
@@ -30,8 +32,9 @@
 	</developers>
 
 	<scm>
-		<connection>https://github.com/Lycop/methodcache.git</connection>
 		<url>https://github.com/Lycop/methodcache</url>
+		<developerConnection>https://github.com/Lycop/methodcache.git</developerConnection>
+		<connection>https://github.com/Lycop/methodcache.git</connection>
 	</scm>
 
 	<properties>
