--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<version>1.2.73</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.carrotsearch</groupId>
+			<artifactId>java-sizeof</artifactId>
+			<version>0.0.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
